# phyloviz

./: CMakeLists.txt  README.md
cMake/: FindSoQt.cmake
doc/: Project - DNA,Protein Sequence Classification.txt  README.md  bioinformatics.txt  fasta-format.txt  index.asciidoc  learn-pcp.txt  learning-hmmer2.txt  notes.asciidoc  pcp-detail.txt
src/: fasta-tool01.c
src/ev-iv/: Makefile.old  ev-iv.cc
src/ph2iv/: Makefile.old  ph2iv.c
